<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roomba_hardware_interface</name>
  <version>0.0.0</version>
  <description>
    The roomba Hardware Interface package enables control of the roomba robot by providing:
    A C++ SDK for direct actuator control
    A ROS 2 hardware interface that integrates the roomba robot with the ROS 2 control framework
    Example programs demonstrating usage
  </description>
  <maintainer email="your.email@example.com">panda</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserialport-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>